Bug 43714 - VIEWING Context Menu: Checkmarks and radio button dots misaligned
Summary: VIEWING Context Menu: Checkmarks and radio button dots misaligned
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.4.4 release
Hardware: Other Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: bibisected35 bibisected35older target...
Keywords: regression
Depends on:
Blocks: 43701
  Show dependency treegraph
 
Reported: 2011-12-11 05:16 UTC by Rainer Bielefeld Retired
Modified: 2013-03-10 17:49 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshots (39.87 KB, application/pdf)
2011-12-11 05:16 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2011-12-11 05:16:03 UTC
Created attachment 54321 [details]
screenshots

All observations with Menu "Tools -> Options -> View - Menu - Icons in Menu = Hidden'
In 3.3.3 in Menu and also context menu checkmarks and also radio button dots were centred.

In 3.4.4 "LibreOffice 3.4.4  - WIN7 Home Premium (64bit) German UI [Build ID: OOO340m1 (Build:402)]":
-  in Menus Checkmarks and radio button dots are shifted some to the right 
   within the checkbox area. For checkmarks that might look elegant, 
   radio button dots only misaligned.

-  in contest menus Checkmarks and radio button dots are shifted some more to the 
   right within the checkbox area, exceed checkbox area. Looks ugly!

I would prefer all centered.

@Christoph:
May be you can contribute a comment concerning "state of the art"?

@Ivan:
You are just checking context menu items, this one seems related and IMHO it might save time when you check this issue, too.
Comment 1 Ivan Timofeev (retired) 2011-12-22 10:08:55 UTC
(In reply to comment #0)
> -  in Menus Checkmarks and radio button dots are shifted some to the right 
>    within the checkbox area. For checkmarks that might look elegant, 
>    radio button dots only misaligned.

This is anyway buggy, even for a checkmark. Heh, our new aero-style native menu rendering seems to be even more awful that the old non-native one... :(

> @Ivan:
> You are just checking context menu items, this one seems related and IMHO it
> might save time when you check this issue, too.

No, most probably it is Windows-specific bug, but on my machine a build under Windows doesn't work (damn!), don't want to investigate why it doesn't, sorry... So I'm resetting assignee to default.
Comment 2 Rainer Bielefeld Retired 2011-12-22 10:44:26 UTC
@Tor
may be you can check Ivan's "Win" suspect? Please feel free to reassign (or reset Assignee to default) if it’s not your area or if provided information is not sufficient. Please set Status to ASSIGNED if you accept this Bug.
Comment 3 Don't use this account, use tml@iki.fi 2011-12-23 00:16:59 UTC
Don't think it is useful to have it assigned to me as that might make people think I would be actively working on it...
Comment 4 Rainer Bielefeld Retired 2011-12-24 00:33:46 UTC
@Michael:
This one might be related to "Bug 36662 - Missing icons (option controls) in right click > Wrap over an image", where you were active.
Comment 5 Not Assigned 2012-10-15 17:29:44 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5b47653cc871da19a68f9bdedf0c99cff65e739e

fdo#43714: for a checkmark use the same rect as for its background



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.