fdo#43714: for a checkmark use the same rect as for its background

Change-Id: Ib8833477eb20b658dde1ea2a78cb0bee0c24241a